[metadata]
name = pymvf
description = pymvf stands for Python Music Visualization Framework and is a project to do exactly what the name says.
version = 0.0.1

[options]
python_requires = ~=3.8
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel
install_requires =
  pyaudio
  aubio
  numpy
  scipy

[options.extras_require]
tests =
  gitlint==0.13.1
  pytest==5.4.3
  pytest-cov==2.10.0
  black==19.10b0
  pylint==2.5.3
  mypy==0.782
  isort>=4.2.5,<5
  detect-secrets==0.14.0
  
examples =
  matplotlib
  psutil

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=False
line_length=88

# Global options:

[mypy]
python_version = 3.7
warn_unused_configs = True
warn_redundant_casts = True
disallow_any_unimported = False
disallow_any_decorated = True
disallow_any_generics = True
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = True

# Per-module options:
[mypy-tests.*]
ignore_errors = True
